@@ -356,9 +356,17 @@ mp_size_t
 mpn_mu_divappr_q_itch (mp_size_t nn, mp_size_t dn, int mua_k)
 {
   mp_size_t itch_local = mpn_mulmod_bnm1_next_size (dn + 1);
-  mp_size_t in = mpn_mu_div_qr_choose_in (nn - dn, dn, mua_k);
+  mp_size_t qn, in;
+
+  qn = nn - dn;
+  if (qn + 1 < dn)
+    {
+      dn = qn + 1;
+    }
+  in = mpn_mu_divappr_q_choose_in (qn, dn, mua_k);
+
   /* FIXME: check for the correct estimate and remove #if */
-#if 0
+#if 1
   mp_size_t itch_out = mpn_mulmod_bnm1_itch (itch_local, dn, in);
 #else
   mp_size_t itch_out = mpn_mulmod_bnm1_itch (itch_local, itch_local, itch_local);
